tests/baselines/reference/invalidUnicodeEscapeSequance.errors.txt
==== tests/cases/compiler/invalidUnicodeEscapeSequance.ts (2 errors) ====
    var arg\u003
           ~
!!! error TS1001: Unexpected character "\".
           ~
!!! error TS1005: ',' expected.